# cosmic-ext-applet-dark-toggle

./: CLAUDE.md  Cargo.toml  README.md  flatpak_schema.json  justfile
.cargo/: config.toml
i18n/bg/: cosmic_ext_applet_dark_toggle.ftl
i18n/cs/: cosmic_ext_applet_dark_toggle.ftl
i18n/en/: cosmic_ext_applet_dark_toggle.ftl
i18n/fr/: cosmic_ext_applet_dark_toggle.ftl
res/: desktop_entry.desktop  metainfo.xml
src/: app.rs  icon.rs  main.rs  view.rs
