[package]
name = "cosmic-ext-applet-dark-toggle"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/4rc0s/cosmic-ext-applet-dark-toggle"

[dependencies]
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
rust-embed = { version = "8", features = ["debug-embed"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-journald = "0.3"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
# rev = "a85b3693994ef2b8275eca6a9eccc86a2d7e9f86"
default-features = false
features = ["applet", "tokio", "wayland"]

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }

# [patch."https://github.com/pop-os/libcosmic"]
# libcosmic = { path = "../libcosmic"}
